# crappy-soundboard

./: .gitignore  .gitmodules  CMakeLists.txt
src/audio/: audio.hpp  audio_manager.cpp  audio_manager.hpp
src/config/: config_manager.cpp  config_manager.hpp
src/core/: app.cpp  app.hpp  main.cpp
src/event/: event.hpp  event_dispatcher.cpp  event_dispatcher.hpp
src/input/: hotkey_manager.cpp  hotkey_manager.hpp  hotkeys.hpp  input.cpp  input.hpp  input_listener.cpp  input_listener.hpp
src/soundboard/: audio_table.cpp  audio_table.hpp  soundboard.cpp  soundboard.hpp
src/ui/: configuration_UI.cpp  configuration_UI.hpp  wheel_overlay_UI.cpp  wheel_overlay_UI.hpp
